<resources>
    <string name="app_name">BMI CALCULATOR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="form_sex_man">Man</string>
    <string name="form_sex_woman">Woman</string>
    <string name="form_result">Result</string>
    <string name="form_back">Back</string>
    <string name="form_calculate">Calculate</string>
    <string name="form_sex">Sex</string>
    <string name="form_age">Age</string>
    <string name="form_height">Height in cm</string>
    <string name="form_weight">Weight in kg</string>
    <string name="form_recipe">Recipe idea for You</string>

    <string name="form_quiz">Quiz</string>
    <string name="form_quiz_start">Start</string>
</resources>