<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/form_weight"
        android:textColor="#000"

        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/form_height"
        android:textColor="#000" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/form_age"
        android:textColor="#000"
        />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/form_sex"
        android:textColor="#000"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/form_sex_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/form_sex_man"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/form_sex_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/form_sex_woman"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/form_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_bg"
        android:onClick="calculate"
        android:text="@string/form_calculate"
        android:textColor="#fafafa" />



    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="15dp"
        android:text="@string/form_result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/result_kcal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/result_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/form_show_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_bg"
        android:onClick="onButtonClick"
        android:text="@string/form_recipe"
        android:visibility="invisible"
        android:textColor="#fafafa" />


</LinearLayout>